--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "dev": "vue-cli-service serve",
     "build:dev": "vue-cli-service build --mode development",
     "build:test": "vue-cli-service build --mode test",
-    "build:master": "vue-cli-service build",
+    "build:master": "vue-cli-service build --mode production",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "element-ui": "^2.6.3",
+    "core-js": "^2.6.5",
     "debug": "^4.1.1",
+    "element-ui": "^2.6.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
