--- a/package.json
+++ b/package.json
@@ -3,35 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build:dev": "vue-cli-service build --mode development",
-    "build:test": "vue-cli-service build --mode test",
-    "build:master": "vue-cli-service build --mode production",
-    "build": "vue-cli-service build",
+    "dev": "npm run dev:pc",
+    "dev:pc": "vue-cli-service serve --open --mode pcDev",
+    "dev:mobile": "vue-cli-service serve --open --mode mobileDev",
+    "clean:pc": "rimraf dist_pc && mkdirp dist_pc",
+    "clean:mobile": "rimraf dist_mobile && mkdirp dist_mobile",
+    "build": "npm run build:dev:pc && npm run build:dev:mobile",
+    "build:dev:pc": "npm run clean:pc && vue-cli-service build --mode pcDevelopment",
+    "build:test:pc": "npm run clean:pc && vue-cli-service build --mode pcTest",
+    "build:master:pc": "npm run clean:pc && vue-cli-service build --mode pcProduction",
+    "build:dev:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileDevelopment",
+    "build:test:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileTest",
+    "build:master:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileProduction",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "core-js": "^2.6.5",
     "debug": "^4.1.1",
-    "element-ui": "^2.6.3",
+    "element-ui": "^2.7.2",
+    "ramda": "^0.26.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.0.5",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.1",
-    "@vue/cli-plugin-eslint": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/babel-preset-app": "^3.6.0",
+    "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-plugin-eslint": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
+    "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.15.3",
+    "babel-plugin-component": "^1.1.1",
+    "eslint": "^5.16.0",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.2.2",
     "lint-staged": "^8.1.5",
     "node-sass": "^4.11.0",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
