--- a/package.json
+++ b/package.json
@@ -3,18 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run dev:pc",
-    "dev:pc": "vue-cli-service serve --open --mode pcDev",
-    "dev:mobile": "vue-cli-service serve --open --mode mobileDev",
-    "clean:pc": "rimraf dist_pc && mkdirp dist_pc",
-    "clean:mobile": "rimraf dist_mobile && mkdirp dist_mobile",
-    "build": "npm run build:dev:pc && npm run build:dev:mobile",
-    "build:dev:pc": "npm run clean:pc && vue-cli-service build --mode pcDevelopment",
-    "build:test:pc": "npm run clean:pc && vue-cli-service build --mode pcTest",
-    "build:master:pc": "npm run clean:pc && vue-cli-service build --mode pcProduction",
-    "build:dev:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileDevelopment",
-    "build:test:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileTest",
-    "build:master:mobile": "npm run clean:mobile && vue-cli-service build --mode mobileProduction",
+    "dev": "vue-cli-service serve --open --mode dev",
+    "clean": "rimraf dist",
+    "build": "npm run build:master",
+    "build:dev": "npm run clean && vue-cli-service build --mode development",
+    "build:test": "npm run clean && vue-cli-service build --mode test",
+    "build:master": "npm run clean && vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix"
   },
