--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 node_modules
 /dist
+/dist_web
+/dist_window
 package-lock.json
 
 # local env files
@@ -14,7 +16,7 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
-#.vscode
+# .vscode
 *.suo
 *.ntvs*
 *.njsproj
