--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-  "name": "vue-spa-cli",
+  "name": "oa-front-pc",
   "version": "0.1.0",
+  "author": "runxsports.com",
+  "description": "oa-front-pc by electron and vue",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --open --mode dev",
-    "clean": "rimraf dist",
-    "build": "npm run build:master",
-    "build:dev": "npm run clean && vue-cli-service build --mode development",
-    "build:test": "npm run clean && vue-cli-service build --mode test",
-    "build:master": "npm run clean && vue-cli-service build --mode production",
+    "dev": "vue-cli-service electron:serve --mode windowDev",
+    "dev:web": "vue-cli-service serve --open --mode webDev",
+    "dev:window": "vue-cli-service electron:serve --mode windowDev",
     "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix"
+    "lint:fix": "vue-cli-service lint --fix",
+    "clean:web": "rimraf dist_web && mkdirp dist_web",
+    "clean:window": "rimraf dist_window && mkdirp dist_window",
+    "icon": "rimraf build && mkdirp build && electron-icon-builder --input=./public/icon.png --output=build --flatten",
+    "build": "npm run build:dev:web && npm run build:dev:window",
+    "build:dev:web": "npm run clean:web && vue-cli-service build --mode webDevelopment",
+    "build:test:web": "npm run clean:web && vue-cli-service build --mode webTest",
+    "build:master:web": "npm run clean:web && vue-cli-service build --mode webProduction",
+    "build:dev:window": "npm run clean:window && vue-cli-service electron:build --mode windowDevelopment",
+    "build:test:window": "npm run clean:window && vue-cli-service electron:build --mode windowTest",
+    "build:master:window": "npm run clean:window && vue-cli-service electron:build --mode windowProduction",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "axios": "^0.18.0",
     "debug": "^4.1.1",
+    "electron-log": "^3.0.5",
     "element-ui": "^2.7.2",
     "ramda": "^0.26.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.5",
-    "vuex": "^3.1.0"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.0",
+    "vuex-electron": "^1.0.3"
   },
   "devDependencies": {
     "@vue/babel-preset-app": "^3.6.0",
@@ -27,9 +41,10 @@
     "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
-    "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
+    "electron": "^4.1.4",
+    "electron-icon-builder": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.2.2",
@@ -37,6 +52,7 @@
     "node-sass": "^4.11.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-electron-builder": "^1.2.0",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
