--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
     "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "debug": "^4.1.1",
-    "element-ui": "^2.7.2",
+    "element-ui": "^2.11.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "ramda": "^0.26.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.5",
-    "vuex": "^3.1.0"
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/babel-preset-app": "^3.6.0",
-    "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "autoprefixer": "^9.5.1",
-    "babel-eslint": "^10.0.1",
+    "@vue/babel-preset-app": "^3.9.2",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.3",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-vue": "^5.2.2",
-    "lint-staged": "^8.1.5",
-    "node-sass": "^4.11.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "lint-staged": "^9.2.1",
+    "node-sass": "^4.12.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
